--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         <section id="heroGrid">
             <div class="spaceMaker"></div>
+            <a href="#heroGrid" class="toTop">Back to Top</a>
             <div class="aboutMe">
                 <p class="heyThere h3">
                     Hey there, I’m Christa Rodriguez, a freelance UX researcher who’s learned enough to be dangerous with UI design. I specialize in empathizing with users and clearly communicating their needs in a language design teams can understand.
@@ -123,7 +124,7 @@
                         </div>
                 </div>
                 <div class="sageApp">
-                    <div class="sageScreen"> <img src="../UX_UI_HW_19/images/Sage Case Study.png" alt="Sage Loading Screen"></div>
+                    <div class="sageScreen"> <a href="casestudy.html"><img src="../UX_UI_HW_19/images/Sage Case Study.png" alt="Sage Loading Screen"></a></div>
                     <div class="sageCardText">
                         <p class="sageTitle h2">Sage Garden Advice App</p>
                         <p class="sageSummery p">This project focued on reserching gardeners’ pain points and how they could be address with the creation of an app that condenced multiple resouces into one. The guidence provided benefits gardeners of all levels, and the calming aesthetics of the app helps create a more relaxing gardening experience.</p>
@@ -146,7 +147,5 @@
             <div class="copyright"><img src="../UX_UI_HW_19/images/Copyright.png" alt="Copy"></div>
         </section>
 
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="js/custom.js"></script>
-
+        
     </body>
